@@ -13,12 +13,10 @@ HOMEPAGE="http://pholser.github.com/jopt-simple/"
 SRC_URI="https://github.com/pholser/${PN}/tarball/${P} -> ${P}.tar.gz"
 
 LICENSE="MIT"
-SLOT="0"
+SLOT="4.5"
 KEYWORDS="~amd64 ~x86"
 
 IUSE=""
-
-RESTRICT="test" # Needs org.infinitest.toolkit.
 
 RDEPEND=">=virtual/jre-1.5"
 DEPEND=">=virtual/jdk-1.5"
