@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Sep 2013; Johann Schmitz <ercpe@gentoo.org> jopt-simple-4.4.ebuild,
+  jopt-simple-4.5.ebuild:
+  Slotted jopt-simple due to broken api
+
 *jopt-simple-4.4 (01 Sep 2013)
 
   01 Sep 2013; Johann Schmitz <ercpe@gentoo.org> +jopt-simple-4.4.ebuild:
